Fix scroll on mobile

--- a/src/functional_components/Drive/Drive.module.scss
+++ b/src/functional_components/Drive/Drive.module.scss
@@ -48,6 +48,7 @@
 
 @media (max-width: $screen_m) {
     .mainArea {
+        overflow-y: auto;
         padding: 0 16px;
     }
 
